--- a/src/routes/AuthLayoutRouter/components/TopNav/TopNav.scss
+++ b/src/routes/AuthLayoutRouter/components/TopNav/TopNav.scss
@@ -24,7 +24,7 @@
   z-index: 50;
   padding-left: $space-5x;
   padding-right: $space-5x;
-  box-shadow: 0px 4px 56px 0px $shadow-color;
+  box-shadow: 0px 4px 56px 0px rgba(35, 65, 91, .30);
 }
 
 .drawerToggle {
