--- a/src/routes/PostDetail/Comments/CommentForm/CommentForm.scss
+++ b/src/routes/PostDetail/Comments/CommentForm/CommentForm.scss
@@ -30,7 +30,7 @@
   margin-right: 10px;
   margin-left: 20px;
   position: relative;
-  top: 14px;
+  top: 18px;
 }
 
 .anonymous-image {
@@ -73,7 +73,7 @@
 .editor {
   width: 90%;
   position: relative;
-  top: 18px;
+  top: 22px;
   padding: 0 30px 30px 0;
   overflow-wrap: break-word;
   cursor: text;
